test/extern/ferguson/mismatch-errors/mismatch-riv-iv.good
mismatch-riv-iv.chpl:4: error: extern proc does not match C declaration
