test/extern/ferguson/mismatch-errors/mismatch-riv-iv.chpl
require "header.h";
use SysCTypes;

extern proc returnIntFromIntArg();

proc main() {
  returnIntFromIntArg();
}
